--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,3 @@
-buildscript {
-	repositories {
-		jcenter()
-		maven { url "http://repo.spring.io/snapshot" }
-		maven { url "http://repo.spring.io/milestone" }
-	}
-	dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.0.BUILD-SNAPSHOT") }
-}
-
 plugins { id "com.devbliss.changelog" version "1.1.0" }
 
 plugins { id "com.jfrog.bintray" version "1.3.1" }
@@ -30,7 +21,8 @@ repositories {
 
 dependencies {
 	compile 'ch.qos.logback:logback-classic:1.1.7'  
-	compile 'org.apache.odftoolkit:odftoolkit:0.6.1-incubating'
+	//compile 'org.apache.odftoolkit:odftoolkit:0.6.1-incubating'
+	compile 'org.apache.odftoolkit:simple-odf:0.7-incubating'
 
 	testCompile('org.codehaus.groovy:groovy-all:2.3.7')
 	testCompile('junit:junit:4.12')
