code cleanup, handling of 3rd col, main method with params, test

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ test {
 	}
 }
 
+checkstyle {
+  sourceSets = [project.sourceSets.main]
+}
+
 task sourceJar(type: Jar) { from sourceSets.main.allJava }
 
 publishing {
